--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@
 # General
 --------------------------------------------------------------*/
 body {
+  font-family: chilanka;
   background-color: #eeeaea;
   color: #4e4e4e;
 }
