--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,6 +149,7 @@ a:hover {
 
 .title-a {
   text-decoration: none;
+  font-family: chilanka;
   font-size: 3rem;
   font-weight: bold;
   text-transform: uppercase;
@@ -214,6 +215,7 @@ a:hover {
   height: 40px;
   width: 40px;
   font-size: 1.2rem;
+  font-family: chilanka;
   border-radius: 50%;
   line-height: 1.6;
   margin: 0 15px 0 0;
@@ -246,6 +248,7 @@ a:hover {
 .ico-circle {
   height: 100px;
   width: 100px;
+  font-family: chilanka;
   font-size: 2rem;
   border-radius: 50%;
   line-height: 1.55;
@@ -293,6 +296,7 @@ a:hover {
   height: 42px;
   background-color: #0078ff;
   opacity: 0.7;
+  font-family: chilanka;
   font-size: 1.6rem;
   line-height: 1.5;
   text-align: center;
@@ -387,6 +391,7 @@ a:hover {
   -webkit-user-select: none;
   -moz-user-select: none;
   user-select: none;
+  font-family: chilanka;
   font-size: 1rem;
   border-radius: 0.3rem;
   border: 1px solid transparent;
@@ -435,6 +440,7 @@ a:hover {
 }
 #header .logo {
   font-size: 28px;
+  font-family: chilanka;
   margin: 0;
   padding: 0;
   font-weight: 600;
@@ -490,6 +496,7 @@ a:hover {
 }
 .navbar a i, .navbar a:focus i {
   font-size: 12px;
+  font-family: chilanka;
   line-height: 0;
   margin-left: 5px;
 }
@@ -531,6 +538,7 @@ a:hover {
 }
 .navbar .dropdown ul a {
   padding: 10px 20px;
+  font-family: chilanka;
   font-size: 14px;
   text-transform: none;
   color: #4e4e4e;
@@ -685,19 +693,23 @@ a:hover {
   color: #fff;
   font-weight: 600;
   font-size: 3rem;
+  font-family: chilanka;
 }
 @media (min-width: 768px) {
   .hero .hero-title {
     font-size: 4.5rem;
+    font-family: chilanka;
   }
 }
 .hero .hero-subtitle {
   font-size: 1.5rem;
   font-weight: 600;
+  font-family: chilanka;
 }
 @media (min-width: 768px) {
   .hero .hero-subtitle {
     font-size: 2.5rem;
+    font-family: chilanka;
   }
 }
 .hero .text-slider-items {
@@ -713,10 +725,12 @@ a:hover {
 .hero-single .hero-title {
   text-transform: uppercase;
   font-size: 3rem;
+  font-family: chilanka;
 }
 @media (min-width: 768px) {
   .hero-single .hero-title {
     font-size: 3.5rem;
+    font-family: chilanka;
   }
 }
 .hero-single .breadcrumb {
@@ -1125,6 +1139,7 @@ a:hover {
   display: inline-block;
   text-transform: uppercase;
   font-size: 0.7rem;
+  font-family: chilanka;
   letter-spacing: 0.1px;
   margin-bottom: 0;
 }
@@ -1170,6 +1185,7 @@ a:hover {
 @media (min-width: 768px) {
   .blog-wrapper .article-title {
     font-size: 1.9rem;
+    font-family: chilanka;
   }
 }
 .blog-wrapper .post-meta {
@@ -1193,6 +1209,7 @@ a:hover {
   border-left: 4px solid #0078ff;
   padding: 18px;
   font-style: italic;
+  font-family: chilanka;
 }
 
 /*------/ Comments /------*/
@@ -1213,6 +1230,7 @@ a:hover {
 @media (min-width: 768px) {
   .box-comments .list-comments .comment-author {
     font-size: 1.5rem;
+    font-family: chilanka;
   }
 }
 .box-comments .list-comments .comment-details {
@@ -1226,6 +1244,7 @@ a:hover {
 .box-comments .list-comments span {
   color: #1e1e1e;
   font-style: italic;
+  font-family: chilanka;
 }
 .box-comments .comment-children {
   margin-left: 40px;
@@ -1235,6 +1254,7 @@ a:hover {
 .widget-sidebar .sidebar-title {
   font-size: 1.6rem;
   font-weight: 600;
+  font-family: chilanka;
   border-left: 5px solid #0078ff;
   padding-left: 15px;
   text-transform: uppercase;
